apps/adguard/base/adguard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-deployment
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: adguard-pvc
          mountPath: /opt/adguardhome/work
          subPath: /data
        - name: adguard-pvc
          mountPath: /opt/adguardhome/conf
        resources: {}
      volumes:
      - name: adguard-pvc
        persistentVolumeClaim:
          claimName: adguard-pvc
