apps/adguard/base/adguard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http-initial
    name: http-initial
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
  - protocol: UDP
    port: 53
    targetPort: dns
    name: dns
  type: LoadBalancer
  loadBalancerIP: 192.168.178.101
