apps/adguard/base/adguard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ui
  namespace: adguard
spec:
  entryPoints:
    - websecure-front
    - websecure-local
  routes:
  - match: Host(`adguard.steffenillium.de`) || Host(`dns.steffenillium.de`)
    kind: Rule
    tls: {}
    services:
    - name: adguard-service
      port: http
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ui-init
  namespace: adguard
spec:
  entryPoints:
    - websecure-local
  routes:
  - match: Host(`adguard-init.steffenillium.de`)
    kind: Rule
    tls: {}
    services:
    - name: adguard-service
      port: http-initial
